<?xml version="1.0"?>
<package format="2">  <!-- ROS1 使用 format="2" 或 "3" -->
  <name>crsf_receiver_msg</name>
  <version>0.0.1</version>
  <description>ROS1 messages package for receiving CRSF (RC channels values) packets over serial port (UART).</description>
  <maintainer email="mhyhre@gmail.com">Andrey T</maintainer>
  <license>MIT</license>

  <!-- ROS1 核心依赖 -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- ROS1 消息生成依赖 -->
  <build_depend>message_generation</build_depend>
  
  <!-- ROS1 运行时依赖 -->
  <exec_depend>message_runtime</exec_depend>
  
  <!-- 其他依赖 -->
  <depend>std_msgs</depend>
  <depend>roscpp</depend>

</package>